Fix projects list visibility - use large max-height value and remove 'Click outside' text

--- a/css/custom-dark-mode.css
+++ b/css/custom-dark-mode.css
@@ -322,7 +322,7 @@ body.dark-mode:not(:has(header.masthead)) #darkModeToggle:hover {
 
 .skills-container.active .projects-list-wrapper {
   width: 50%;
-  max-height: none;
+  max-height: 2000px;
   padding-left: 2rem;
   opacity: 1;
   transform: translateX(0);
